docs/design/v1.0/design-system.md
# LaiMePet 设计系统 — V1.0

> **版本**：v1.0
> **日期**：2026-07-01
> **作者**：UI/UX 设计师
> **状态**：初稿 / 待评审

---

## 0. 设计原则

| 原则 | 说明 |
|------|------|
| **宠物是主角** | UI 服务于宠物展示，不喧宾夺主。面板用亚克力/云母材质退后，宠物 3D 形象突出 |
| **融入桌面** | 长驻应用不打扰工作，悬浮态零 UI，控制面板可隐藏 |
| **冷暖平衡** | 亚克力冷材质（UI）+ 暖色调品牌色 + 温暖写实宠物，形成视觉张力 |
| **跟随系统** | 亮色/暗色自动切换，材质跟随 Windows 11 主题，保持原生感 |
| **性能可降级** | 动效跟随性能模式分级，低配机自动精简，保证流畅 |

---

## 1. 色彩系统

### 1.1 品牌色

> 暖琥珀色 — 源自宠物皮毛的温暖联想，同时保持专业感，不幼稚。

| Token | 色值 | 用途 |
|-------|------|------|
| `--color-brand-50` | `#FFF5ED` | 品牌色浅底 |
| `--color-brand-100` | `#FFE8D5` | 标签背景、选中态底色 |
| `--color-brand-200` | `#FFD4AE` | 进度条填充、焦点环 |
| `--color-brand-300` | `#FFB87D` | 悬浮态（hover） |
| `--color-brand-400` | `#F59E5B` | **主色** — CTA按钮、链接、开关激活态 |
| `--color-brand-500` | `#E07D3A` | 按下态（active） |
| `--color-brand-600` | `#C06028` | 深色强调文字 |
| `--color-brand-700` | `#9A4A1C` | 暗色模式下主色 |
| `--color-brand-800` | `#7A3812` | 暗色模式按下态 |
| `--color-brand-900` | `#5C280A` | 极少使用 |

### 1.2 中性色 — 亮色模式

| Token | 色值 | 用途 |
|-------|------|------|
| `--color-neutral-0` | `#FFFFFF` | 纯白底（卡片内容区） |
| `--color-neutral-50` | `#FAFAF9` | 默认页面背景 |
| `--color-neutral-100` | `#F5F0ED` | 次级背景、分组底色 |
| `--color-neutral-200` | `#E8E0DB` | 分隔线、禁用态底色 |
| `--color-neutral-300` | `#D4CBC4` | 边框 |
| `--color-neutral-400` | `#A89F98` | 禁用态文字 |
| `--color-neutral-500` | `#7A716B` | 次要文字 |
| `--color-neutral-600` | `#5D5550` | 正文文字 |
| `--color-neutral-700` | `#423C38` | 标题文字 |
| `--color-neutral-800` | `#2A2522` | 主标题 |
| `--color-neutral-900` | `#1A1614` | 最高强调（极少） |

### 1.3 中性色 — 暗色模式

| Token | 色值 | 用途 |
|-------|------|------|
| `--color-neutral-0` | `#1E1B19` | 暗色页面背景（对应亮色白） |
| `--color-neutral-50` | `#2A2522` | 默认暗色背景 |
| `--color-neutral-100` | `#38322E` | 次级暗色背景 |
| `--color-neutral-200` | `#4A433E` | 分隔线、禁用态底色 |
| `--color-neutral-300` | `#6B6159` | 暗色边框 |
| `--color-neutral-400` | `#8B8078` | 禁用态文字 |
| `--color-neutral-500` | `#A0968E` | 暗色次要文字 |
| `--color-neutral-600` | `#C4BCB5` | 暗色正文 |
| `--color-neutral-700` | `#DCD5CF` | 暗色标题 |
| `--color-neutral-800` | `#EFE9E4` | 暗色主标题 |
| `--color-neutral-900` | `#F8F4F1` | 暗色最高强调 |

### 1.4 语义色

| Token | 亮色 | 暗色 | 用途 |
|-------|------|------|------|
| `--color-success` | `#4CAF50` | `#5CBF60` | 成功/已完成 |
| `--color-success-bg` | `#EDF7EE` | `#1C2E1D` | 成功态背景 |
| `--color-warning` | `#F5A623` | `#F7B84D` | 警告/提醒 |
| `--color-warning-bg` | `#FEF6EC` | `#2E2516` | 警告态背景 |
| `--color-error` | `#E8553D` | `#ED6B55` | 错误/危险（暖红色，不刺眼）|
| `--color-error-bg` | `#FDEDEA` | `#2E1E1B` | 错误态背景 |
| `--color-info` | `#5B9BD5` | `#6BADE0` | 信息提示 |
| `--color-info-bg` | `#EDF4FB` | `#192433` | 信息态背景 |

### 1.5 宠物心情色（用于迷你指示器）

| 心情 | 色值 | 渐变 |
|------|------|------|
| 开心 😊 | `#F59E5B` | `#FFB87D → #F59E5B` |
| 无聊 😐 | `#A89F98` | `#C4BCB5 → #8B8078` |
| 难过 😢 | `#7BADD4` | `#9CC8E8 → #5B9BD5` |
| 饥饿 🍽️ | `#F2A65A` | `#F7C98B → #E07D3A` |

> 迷你指示器为 8px 直径的发光圆点，使用对应心情渐变色 + 4px 外发光（blur-radius: 6px, 透明度 40%）。

---

## 2. 字体系统

### 2.1 字体族

```css
/* Windows 11 系统字体栈 */
--font-sans: "Segoe UI Variable", "Segoe UI", system-ui, -apple-system, sans-serif;
--font-sans-static: "Segoe UI", "Microsoft YaHei", "PingFang SC", sans-serif;  /* 静态回退 */
--font-mono: "Cascadia Code", "JetBrains Mono", "Fira Code", Consolas, monospace;
```

| 用途 | 字体 | 说明 |
|------|------|------|
| UI 正文（拉丁/数字） | Segoe UI Variable / Segoe UI | Windows 11 系统字体，可变字重 |
| UI 正文（中文） | Microsoft YaHei（微软雅黑）| Windows 预装，覆盖 CJK |
| 代码/数据 | Cascadia Code | Windows Terminal 默认等宽字体 |
| macOS 回退（预留） | SF Pro Text + PingFang SC | 未来跨平台时启用 |

### 2.2 字号层级

> 基准：浏览器默认 16px。所有字号基于 4px 递增。

| Token | 字号 | 行高 | 字重 | 用途 |
|-------|------|------|------|------|
| `--text-display` | 32px | 40px (1.25) | Semibold 600 | 启动页标题、大时刻 |
| `--text-h1` | 24px | 32px (1.33) | Semibold 600 | 页面标题 |
| `--text-h2` | 20px | 28px (1.4) | Semibold 600 | 区块标题 |
| `--text-h3` | 16px | 24px (1.5) | Semibold 600 | 小标题 |
| `--text-body-l` | 15px | 22px (1.47) | Regular 400 | 长文、说明 |
| `--text-body-m` | 14px | 20px (1.43) | Regular 400 | **默认正文** |
| `--text-body-s` | 13px | 18px (1.38) | Regular 400 | 辅助信息 |
| `--text-caption` | 11px | 16px (1.45) | Regular 400 | 角标、提示 |
| `--text-overline` | 10px | 14px (1.4) | Semibold 600 | 标签（大写） |

### 2.3 字重

| Token | 值 | 用途 |
|-------|-----|------|
| `--font-light` | 300 | 极少使用（Display 级别备选）|
| `--font-regular` | 400 | 正文、标签 |
| `--font-medium` | 500 | 强调文字、按钮 |
| `--font-semibold` | 600 | 标题、CTA |
| `--font-bold` | 700 | 极强调（数字、价格）|

---

## 3. 间距系统

> 基于 **4px 网格**。所有间距必须是 4 的倍数。

| Token | 值 | 用途 |
|-------|-----|------|
| `--space-0` | 0px | 无间距 |
| `--space-xs` | 4px | 紧密元素之间（图标与文字、标签内边距）|
| `--space-sm` | 8px | 相关元素间距（按钮组、表单行内间距）|
| `--space-md` | 16px | **默认间距**（卡片内边距、区块内间距）|
| `--space-lg` | 24px | 区块间距、弹窗内边距 |
| `--space-xl` | 32px | 页面级间距、大区块分隔 |
| `--space-2xl` | 48px | 页面上下留白、主区块间距 |
| `--space-3xl` | 64px | 极少使用（启动页、引导页）|

### 3.1 应用规则

```
┌────────────────────────────────────┐
│  Panel (Mica)                      │
│  ┌──────────────────────────────┐  │
│  │  Section                     │  │
│  │  padding: --space-md (16px)  │  │
│  │  ┌────┐ ┌────┐              │  │
│  │  │ Btn│ │ Btn│  gap: 8px    │  │
│  │  └────┘ └────┘              │  │
│  └──────────────────────────────┘  │
│  ← gap: --space-lg (24px) →        │
│  ┌──────────────────────────────┐  │
│  │  Section 2                   │  │
│  └──────────────────────────────┘  │
└────────────────────────────────────┘
```

---

## 4. 材质系统

### 4.1 Windows 11 材质类型

| 材质 | 透明度 | 模糊 | 性能 | 适用 |
|------|--------|------|------|------|
| **Mica** | 不透明，采样壁纸色调 | 无 | ★★★ | 主窗口背景、设置面板（长驻窗口）|
| **Mica Alt** | 同 Mica，色调略不同 | 无 | ★★★ | 次级面板、Tab 页背景 |
| **Acrylic** | 半透明 60-70% | 有（高斯模糊） | ★★☆ | 弹出菜单、右键菜单、悬停控制条（瞬态表面）|
| **Solid** | 100% 不透明 | 无 | ★★★ | 内容阅读区、代码区（保证可读性）|

### 4.2 LaiMePet 材质分配

| 表面 | 材质 | 圆角 | 说明 |
|------|------|------|------|
| 主控制面板 | Mica | `--radius-lg` (12px) | 双击宠物展开的完整面板 |
| 设置窗口 | Mica Alt | `--radius-lg` (12px) | 从控制面板进入的独立设置页 |
| 右键菜单 | Acrylic | `--radius-md` (8px) | 宠物身上右键 |
| 悬停控制条 | Acrylic (60%) | `--radius-full` | 鼠标悬停宠物时浮现 |
| 迷你心情指示器 | 全透明（仅光晕）| `--radius-full` | 宠物旁边 8px 圆点 |
| Toast 通知 | Acrylic (80%) | `--radius-md` (8px) | 右上角弹出 |
| 弹窗 / 对话框 | Mica | `--radius-lg` (12px) | 确认操作 |
| 宠物展示区 | **无材质（全透明）** | 无 | 宠物直接在桌面上，无窗口边框 |

### 4.3 材质使用原则

1. **Mica 用于长驻窗口** — 采样桌面壁纸一次，不会实时变化，性能友好
2. **Acrylic 用于瞬态表面** — 菜单、提示、悬停条。短暂出现，用完即消失
3. **宠物本身无材质** — 直接渲染在桌面上，周围完全透明（参考 Desktop Mate）
4. **暗色模式下材质自动跟随** — Windows 11 系统级材质在暗色模式下色调变暗

---

## 5. 圆角系统

| Token | 值 | 用途 |
|-------|-----|------|
| `--radius-none` | 0px | 无圆角 |
| `--radius-sm` | 4px | 小按钮、输入框、标签 |
| `--radius-md` | 8px | 卡片、菜单、通知 |
| `--radius-lg` | 12px | 面板、弹窗、大容器 |
| `--radius-full` | 9999px | 胶囊按钮、指示器、滑块 |

---

## 6. 阴影系统

| Token | 值 | 用途 |
|-------|-----|------|
| `--shadow-none` | `none` | 无阴影 |
| `--shadow-sm` | `0 1px 2px rgba(0,0,0,0.04), 0 1px 3px rgba(0,0,0,0.08)` | 卡片（微弱） |
| `--shadow-md` | `0 4px 8px rgba(0,0,0,0.08), 0 2px 4px rgba(0,0,0,0.04)` | 弹出菜单、悬停控制条 |
| `--shadow-lg` | `0 8px 16px rgba(0,0,0,0.12), 0 4px 8px rgba(0,0,0,0.06)` | 弹窗、对话框 |
| `--shadow-glow` | `0 0 8px rgba(245,158,91,0.4)` | 品牌发光（指示器、选中态） |

> 暗色模式下阴影透明度提高 50%，因为暗色背景上阴影需要更强对比。

---

## 7. 动效系统

### 7.1 持续时间

| Token | 值 | 用途 |
|-------|-----|------|
| `--duration-instant` | 100ms | 微交互反馈（按钮按下、hover 切换）|
| `--duration-fast` | 200ms | 小过渡（开关切换、标签切换）|
| `--duration-normal` | 300ms | **默认过渡**（面板展开、菜单出现）|
| `--duration-slow` | 500ms | 大过渡（弹窗进出、宠物状态切换）|
| `--duration-expressive` | 800ms | 情感表达（宠物开心动画、特殊效果）|

### 7.2 缓动曲线

| Token | cubic-bezier() | 用途 |
|-------|---------------|------|
| `--ease-default` | `cubic-bezier(0.4, 0, 0.2, 1)` | 标准过渡（Material 标准缓动）|
| `--ease-in` | `cubic-bezier(0.4, 0, 1, 1)` | 元素进入/出现 |
| `--ease-out` | `cubic-bezier(0, 0, 0.2, 1)` | 元素离开/消失 |
| `--ease-bounce` | `cubic-bezier(0.34, 1.56, 0.64, 1)` | 弹性效果（抚摸反馈、宠物开心）|
| `--ease-spring` | `cubic-bezier(0.22, 0.99, 0.36, 1.04)` | 弹性过渡（指示器跳动）|

### 7.3 动效分级策略

| 性能模式 | 帧率 | 动效 | 说明 |
|---------|------|------|------|
| **高性能** | 60fps | 全部开启 | 骨骼动画流畅、毛发光影、粒子特效（开心时的星星）、弹性 UI 过渡 |
| **中性能** | 30fps | 保留核心 | 骨骼动画减帧、无粒子特效、弹性过渡降为默认缓动、毛发光影简化 |
| **低性能** | 15fps | 仅必要 | 关键帧动画（4-6 帧循环）、无过渡动画直接切换、无发光效果 |

> 性能模式由应用根据硬件配置自动检测推荐，用户可在设置中手动切换。

---

## 8. 图标系统

### 8.1 图标风格

- **风格**：线性图标 + 圆角端点（`stroke-linecap: round`, `stroke-linejoin: round`）
- **基准尺寸**：16px（工具栏）、20px（导航）、24px（大按钮）
- **描边宽度**：1.5px（与 Windows 11 Segoe Fluent Icons 保持一致）
- **填充**：默认描边，选中态可填充

### 8.2 核心图标清单（V1.0）

| 图标 | 用途 | 尺寸 |
|------|------|------|
| 宠物头像占位 | 宠物列表、托盘图标 | 24px / 48px |
| 抚摸（手型）| 互动按钮 | 20px |
| 投喂（骨头/鱼）| 互动按钮 | 20px |
| 设置（齿轮）| 设置入口 | 16px |
| 切换宠物 | 宠物列表 | 20px |
| 性能模式 | 性能切换 | 16px |
| 音量 | 音量控制 | 16px |
| 暗色/亮色 | 主题切换 | 16px |
| 通知铃铛 | 提醒 | 16px |
| 关闭 | 关闭面板 | 16px |

### 8.3 应用图标（Logo）

规格：
- `.ico` 格式，包含 16/24/32/48/256px 尺寸
- 主形象：提取品牌暖琥珀色 (#F59E5B) + 简化宠物剪影
- 托盘图标：16px 单色（亮色模式用深灰 #2A2522，暗色模式用浅灰 #EFE9E4）

> Logo 具体设计留待后续单独产出。

---

## 9. 组件基础规范

### 9.1 按钮

```
┌──────────────────────────────────────┐
│  Button Variants                     │
│                                      │
│  Primary:   [ === CTA按钮 === ]      │  品牌色填充
│  Secondary: [ === 次要按钮 === ]      │  描边，透明底
│  Ghost:      === 文字按钮 ===         │  无边框
│  Icon:       [ 🔔 ]                  │  仅图标，24px/20px
│  Danger:    [ === 危险操作 === ]      │  语义错误色
└──────────────────────────────────────┘
```

| 属性 | Primary | Secondary | Ghost | Icon |
|------|---------|-----------|-------|------|
| 背景 | `--color-brand-400` | 透明 | 透明 | 透明 |
| 边框 | 无 | `--color-neutral-300` | 无 | 无 |
| 文字 | `#FFF` | `--color-neutral-700` | `--color-brand-400` | — |
| 圆角 | `--radius-sm` | `--radius-sm` | `--radius-sm` | `--radius-sm` |
| 高度 | 32px | 32px | 32px | 32px / 24px |
| 内边距 | 0 16px | 0 16px | 0 8px | 4px |
| 字号 | `--text-body-m` | `--text-body-m` | `--text-body-m` | — |

**状态覆盖**（以 Primary 为例）：

| 状态 | 视觉 |
|------|------|
| 默认 | `bg: brand-400, text: #FFF` |
| 悬停 Hover | `bg: brand-300`（浅一级），光标 pointer |
| 按下 Active | `bg: brand-500`（深一级），`scale: 0.97`（100ms 微缩放）|
| 禁用 Disabled | `bg: neutral-200, text: neutral-400`，光标 not-allowed |
| 加载中 Loading | 按钮内显示 16px 旋转环，保持原宽度，禁止点击 |
| 聚焦 Focus | `outline: 2px solid brand-400, outline-offset: 2px`（键盘导航可见）|

### 9.2 滑块（写实度控制）

| 属性 | 值 |
|------|-----|
| 轨道高度 | 4px |
| 轨道颜色 | `--color-neutral-200`（未填充）/ `--color-brand-400`（已填充）|
| 滑块尺寸 | 20px × 20px |
| 滑块颜色 | `#FFF` + `--shadow-sm` |
| 滑块悬浮 | `--shadow-md` + `border: 2px solid brand-300` |
| 刻度标记 | 0 / 25 / 50 / 75 / 100（在轨道下方，caption 字号）|
| 两端标签 | 左「卡通」右「写实」（body-s）|

### 9.3 开关 Toggle

| 属性 | 值 |
|------|-----|
| 尺寸 | 40px × 20px（轨道）/ 16px × 16px（滑块）|
| 关闭态 | 轨道 `neutral-200`，滑块 `#FFF` |
| 开启态 | 轨道 `brand-400`，滑块 `#FFF` 平移 20px |
| 过渡 | `--duration-fast` (200ms) + `--ease-default` |
| 禁用 | 整体透明度 40% |

### 9.4 右键菜单

| 属性 | 值 |
|------|-----|
| 材质 | Acrylic（80% 透明度 + 背景模糊）|
| 圆角 | `--radius-md` (8px) |
| 阴影 | `--shadow-md` |
| 宽度 | 最小 160px，最大 240px |
| 项高度 | 36px |
| 项内边距 | 8px 12px |
| 分隔线 | 1px `neutral-200`，上下 4px 间距 |
| 选中态 | 背景 `brand-100`（亮色）/ `brand-100 + 20%透明`（暗色）|
| 快捷键文字 | 右对齐，`--text-caption`，`neutral-500` |

### 9.5 悬停控制条

| 属性 | 值 |
|------|-----|
| 材质 | Acrylic（60%）|
| 形状 | 胶囊形（`radius-full`）|
| 高度 | 40px |
| 内边距 | 4px 12px |
| 内含 | 图标按钮组（抚摸、投喂、互动、设置），间距 4px |
| 浮现方式 | 鼠标悬停宠物 300ms 后，从宠物上方淡入 + 上移 8px |
| 消失 | 鼠标移出 500ms 后淡出，或鼠标进入控制条时保持 |
| 位置 | 宠物 bounding box 上方 12px，水平居中 |

### 9.6 迷你心情指示器

| 属性 | 值 |
|------|-----|
| 尺寸 | 8px 直径 |
| 位置 | 宠物右上角，距离宠物 bounding box 边缘 4px |
| 发光 | 4px 外发光（blur-radius: 6px），透明度 40%，心情色 |
| 颜色 | 见 §1.5 宠物心情色表 |
| 动效 | 开心时间歇跳动（`ease-bounce`，周期 3s）；无聊时缓慢明暗呼吸（周期 5s）|

### 9.7 Toast 通知

| 属性 | 值 |
|------|-----|
| 材质 | Acrylic（80%）|
| 圆角 | `--radius-md` (8px) |
| 阴影 | `--shadow-md` |
| 位置 | 屏幕右上角，距离顶部 16px，右侧 16px |
| 最大宽度 | 320px |
| 内边距 | 12px 16px |
| 内容 | 图标（16px）+ 文字（body-s）+ 关闭按钮 |
| 进入动画 | 从右侧滑入 + 淡入（300ms，`ease-out`）|
| 消失 | 5s 后自动淡出（200ms，`ease-in`），或手动关闭 |
| 类型 | 成功（绿）、警告（橙）、错误（红）、信息（蓝）、宠物提醒（品牌色 + 宠物图标）|

### 9.8 弹窗 / 对话框

| 属性 | 值 |
|------|-----|
| 材质 | Mica（主窗口背景）|
| 圆角 | `--radius-lg` (12px) |
| 阴影 | `--shadow-lg` |
| 最小宽度 | 360px |
| 最大宽度 | 480px |
| 内边距 | 24px（`--space-lg`）|
| 标题 | `--text-h2`，底部 16px 间距 |
| 正文 | `--text-body-m`，`neutral-600` |
| 按钮区 | 右对齐，按钮间距 8px，顶部 24px 间距 |
| 遮罩层 | 半透明黑 `rgba(0,0,0,0.3)`（亮色）/ `rgba(0,0,0,0.5)`（暗色）|
| 进入动画 | 遮罩淡入 + 弹窗缩放淡入（`scale: 0.95→1`，300ms，`ease-out`）|
| 退出动画 | 同上反向（200ms，`ease-in`）|

---

## 10. 响应式策略（预留）

> V1.0 聚焦 Windows 桌面端，但预留以下适配点：

| 断点 | 宽度 | 适配策略 |
|------|------|---------|
| Desktop | >1024px | 默认设计基准 |
| Tablet | 768-1024px | 面板缩小至 80%，宠物等比缩放 |
| Mobile | <768px | V1.0 不做；V2.0 考虑配套手机 App |

---

## 11. 可访问性（Accessibility）

| 项目 | 标准 | 实现 |
|------|------|------|
| 色彩对比度 | WCAG 2.1 AA（≥4.5:1 正文，≥3:1 大文字）| 所有文字-背景组合已验证 |
| 键盘导航 | Tab 焦点顺序、Enter/Space 激活、Esc 关闭 | 控制面板和设置页全键盘可达 |
| 焦点指示器 | 2px outline + 2px offset，品牌色 | 覆盖所有可交互元素 |
| 屏幕阅读器 | aria-label / role 属性 | 按钮、菜单、通知标注语义 |
| 高对比度模式 | Windows 高对比度 API 检测 | 关闭材质效果，使用纯色 |
| 动画控制 | `prefers-reduced-motion` 媒体查询 | 减少/禁用非必要动效 |

---

## 12. 设计 Token 命名规范

```
--{category}-{role}-{variant}-{state}
```

**Categories**：`color` / `text` / `space` / `radius` / `shadow` / `duration` / `ease`

**示例**：
```
--color-brand-400          → 品牌主色
--color-neutral-600        → 中性正文色
--color-success-bg         → 成功态背景
--text-body-m              → 默认正文
--space-md                 → 默认间距 16px
--radius-lg                → 大圆角 12px
--shadow-glow              → 品牌发光
--duration-normal          → 标准过渡 300ms
--ease-bounce              → 弹性缓动
```

> 前端实现时映射为 CSS Custom Properties，定义在 `:root` 和 `[data-theme="dark"]` 下，由 JS 读取系统主题自动切换。

---

## 附录 A：与 PRD 的对应关系

| PRD 需求 | 设计系统映射 |
|---------|------------|
| 写实度滑块 0-100 | §9.2 滑块组件，带刻度标记和两端标签 |
| 显示模式切换（悬浮窗/固定窗口）| §9.4 右键菜单项，§9.5/9.6 悬浮态 UI |
| 互动按钮 | §9.1 图标按钮（Ghost + Icon variants），§9.5 悬停控制条 |
| 心情系统 | §1.5 心情色表，§9.6 迷你指示器 |
| 性能模式（低/中/高）| §7.3 动效分级策略 |
| 开机自启 & 托盘 | §8.3 托盘图标规格 |
| 宠物叫声控制 | §9.1 音量图标按钮 |
| 设置模块 | Mica 材质面板，§9.8 弹窗中的设置项 |

---

## 附录 B：文件目录约定

```
docs/design/
├── README.md                  ← 版本索引
├── v1.0/
│   ├── design-system.md       ← 本文件（设计系统）
│   ├── interaction-design.md  ← 交互设计（下一阶段）
│   └── ui-screens.md          ← 界面设计描述（最后阶段）
└── assets/                    ← 设计资源（SVG/PNG/Token JSON）
```

> 本文档完成后，下一阶段输出 `interaction-design.md`，包含完整用户流程图与微交互定义。
